# nvtuner

./: CMakeLists.txt  LICENSE  README.md  README_zh.html  README_zh.md
cmake/: FindNVML.cmake
docs/: dev-notes.md  easy-oc-guide.md
scripts/: preuninstall.sh
src/: main.cpp  nvml_compat.cpp  nvml_compat.h  nvtuner.cpp  nvtuner.h  stream_redirect.cpp  stream_redirect.h  sys_utils.cpp  sys_utils.h
src/components/: dashboard.cpp  dashboard.h  graphs_tab.cpp  graphs_tab.h  log_console.cpp  log_console.h  oc_tab.cpp  oc_tab.h  sparklines.cpp  sparklines.h
